# nptel-lec

Programming in Modern C++/Week-01/01-Course Overview/: README.md
Programming in Modern C++/Week-01/01-Course Overview/DemoProject/: CMakeLists.txt  README.md
Programming in Modern C++/Week-01/01-Course Overview/DemoProject/src/: main.cpp  versionCheck.cpp
Programming in Modern C++/Week-01/02-IO_and_Loop/: README.md
Programming in Modern C++/Week-01/02-IO_and_Loop/Programs/: CMakeLists.txt
Programming in Modern C++/Week-01/02-IO_and_Loop/Programs/src/: addNumbers.cpp  helloWorld.cpp  squareRoot.cpp  sumOfN.cpp
